// SPDX-FileCopyrightText: 2025 Carnegie Mellon University - LivingEdgeLab
//
// SPDX-License-Identifier: GPL-2.0-only

syntax = "proto3";
package steeleagle.protocol.services.report_service;

import "common.proto";

/*
 * Used to report messages to the Swarm Controller server
 * or to other collaborative vehicles
 */
service Report {
  // Send a report to the server, or to an intended recipient
  rpc SendReport (SendReportRequest)
	returns (steeleagle.protocol.common.Response) {}
}

message ReportMessage {
  int32 report_code = 1; // Integer report code, interpreted by the backend
}

message SendReportRequest {
  steeleagle.protocol.common.Request request = 1;
  ReportMessage report = 2;
}
